syntax = "proto3";

option go_package="github.com/abmpio/resourcex-sdk/proto";

package nix;

service Resourcex {
	rpc ResourcexHealthCheck(ResourcexHealthCheckRequest) returns (ResourcexHealthCheckResponse);

    // 客户端流式RPC方法，用于上传文件
    rpc ResourcexUploadFile(stream ResourcexUploadFileChunk) returns (ResourcexUploadFileResponse);
    // 获取文件内容
    rpc ResourcexGetContent (ResourcexGetContentRequest) returns (ResourcexGetContentResponse);
    // 流式获取文件内容
    rpc ResourcexGetContentStream (ResourcexGetContentStreamRequest) returns (stream ResourcexGetContentStreamChunk);
}

// 静态站点服务
service StaticWebsite {
	rpc StaticWebsiteHealthCheck(StaticWebsiteHealthCheckRequest) returns (StaticWebsiteHealthCheckResponse);

    // 获取静态站点的页面文件列表
    rpc StaticWebsitePageList(StaticWebsitePageListRequest) returns (StaticWebsitePageListResponse);
    // 用于上传静态站点文件
    rpc StaticWebsiteUploadFile(stream StaticWebsiteUploadFileChunk) returns (StaticWebsiteUploadFileResponse);
    // 删除静态站点文件
    rpc StaticWebsiteDeleteFile(StaticWebsiteDeleteFileRequest) returns (StaticWebsiteDeleteFileResponse);
    // 发布站点
    rpc StaticWebsitePublish(StaticWebsitePublishRequest) returns (StaticWebsitePublishResponse);
}

message ResourcexBaseResponse {
	int32 code = 1;
	string message = 2;
}

message ResourcexHealthCheckRequest {
	string service = 1;
}

message ResourcexHealthCheckResponse {
	enum ServiceStatus{
		UNKNOWN = 0;
		SERVING = 1;
		NOT_SERVING = 2;
		SERVICE_UNKNOWN = 3;
	}
	ServiceStatus status = 1;
}

message ResourcexUploadFileChunk {
    oneof chunk {
        // 文件元数据（文件名、MD5等）
        ResourcexUploadFileMetadata metadata = 1; 
        // 文件数据块
        bytes data = 2;             
    }
}

message ResourcexUploadFileMetadata {
    // 客户端请求id,客户端自行保证其唯一
    string requestId = 1;
    // 发送此文件的app
    string app = 2;
    // 此文件的标签，通常用于区分业务
    string tag = 3;
    // 租户id
    string tenantId = 4;
    // 所对应的空间id
    string spaceObjectId = 5;
    // 指定存储到服务器中的文件路径
    string fullFilePath = 6;
    // 文件名
    string fileName = 7;
    // 上传文件的用户id
    string userId = 8;
    // 文件的MD5哈希值
    string fileMd5 = 9;
    // 文件大小
    int64 fileSize = 10;
    // 文件内容类型
    string contentType = 11;
    // 文件描述
    string description = 12;
    // 下载时服务器给的文件名
    string downloadFileName = 13;
}

message ResourcexUploadFileResponse {    
    // 是否成功
    bool success = 1;
    // 如果失败，则返回失败结果 
    string message = 2;
    // 返回客户端请求时的id
    string requestId = 3;
    // 文件对象id
    string fileObjectId = 4;
    // 资源名称
    string resourceName = 5;
    // 文件名
    string fileName = 6;
    // 文件下载url
    string downloadUrl = 7;
    string downloadFileName = 8;
}

message ResourcexGetContentRequest {
    // 文件objectId
    string fileObjectId = 1;
}

message ResourcexInfo {
    string FileObjectId = 1;
    // 文件所属空间id
    string spaceObjectId = 2;
    // 文件tag
    string tag = 3;
    // 文件所属文件夹
    string folder = 4;
    // 资源名称
    string name = 5;
    // 文件名
    string fileName = 6;
    // 文件内容的md4
    string md5 = 7;
    // 文件大小
    int64 size = 8;
    // 文件类型
    string fileType = 9;
    // mime类型 
    string mimeType = 10;
    // 文件描述
    string description = 11;
    // 预览url
    string previewUrl = 12;
    // 下载url
    string downloadUrl = 13;
}

message ResourcexGetContentResponse {
    // 是否成功
    bool success = 1;
    // 如果失败，则返回失败结果 
    string message = 2;    
    // 要获取的文件objectId
    string fileObjectId = 3;
    // 文件信息
    ResourcexInfo info = 4;
    // 文件内容
    bytes content = 5;
}

message ResourcexGetContentStreamRequest {
    // 文件objectId
    string fileObjectId = 1;
}

message ResourcexGetContentStreamChunk {
    // 是否成功
    bool success = 1;
    // 如果失败，则返回失败结果 
    string message = 2;    
    // 要获取的文件objectId
    string fileObjectId = 3;
    // 文件信息
    ResourcexInfo info = 4;
    // 文件内容
    bytes content = 5;
}

message StaticWebsiteHealthCheckRequest {
	string service = 1;
}

message StaticWebsiteHealthCheckResponse {
	enum ServiceStatus{
		UNKNOWN = 0;
		SERVING = 1;
		NOT_SERVING = 2;
		SERVICE_UNKNOWN = 3;
	}
	ServiceStatus status = 1;
}

message StaticWebsitePageListRequest {
	string name = 1;
    // 要搜索的子文件夹中的文件
    repeated string subFolderList = 2;
}

// 静态站点信息
message StaticWebsiteInfo {
	string spaceObjectId = 1;
    string spaceName = 2;
    // 名称
    string name = 3;
    // 显示名称
    string displayName = 4;
    string description = 5;
    string websiteRootUrl = 6;
}

message StaticWebsitePageListResponse {
    StaticWebsiteInfo websiteInfo = 1;
	repeated ResourcexInfo fileList = 2;
}

message StaticWebsiteUploadFileChunk {
    oneof chunk {
        // 文件元数据（文件名、MD5等）
        StaticWebsiteUploadFileMetadata metadata = 1; 
        // 文件数据块
        bytes data = 2;             
    }
}

message StaticWebsiteUploadFileMetadata {
    // 客户端请求id,客户端自行保证其唯一
    string requestId = 1;
    // 网站名称
    string staticWebsiteName = 2;
    // 上传此文件的app
    string app = 3;
    // 指定存储到服务器中的文件路径
    string fullFilePath = 4;
    // 文件名
    string fileName = 5;
    // 上传文件的用户id
    string userId = 6;
    // 文件的MD5哈希值
    string fileMd5 = 7;
    // 文件大小
    int64 fileSize = 8;
    // 文件内容类型,如html,js,css等
    string contentType = 9;
    // 文件描述
    string description = 10;
}

// 静态站点文件上传结果
message StaticWebsiteUploadFileResponse {    
    // 是否成功
    bool success = 1;
    // 如果失败，则返回失败结果 
    string message = 2;
    // 返回客户端请求时的id
    string requestId = 3;
    // 文件对象id
    string fileObjectId = 4;
    // 资源名称
    string resourceName = 5;
    // 文件名
    string fileName = 6;
    // 文件下载url
    string downloadUrl = 7;
    // 预览url
    string previewUrl = 8;
}

message StaticWebsiteDeleteFileRequest {
	// 网站名称
    string staticWebsiteName = 1;
    // 删除的文件objectId
    string FileObjectId = 2;
}

message StaticWebsiteDeleteFileResponse {
	// 网站名称
    string staticWebsiteName = 1;
    // 删除的文件objectId
    string FileObjectId = 2;
    // 是否成功
    bool success = 3;
    // 如果失败，则返回失败的详细信息
    string Message = 4;
}

message StaticWebsitePublishRequest {
	// 网站名称
    string staticWebsiteName = 1;
}

message StaticWebsitePublishResponse {
	// 网站名称
    string staticWebsiteName = 1;
    // 是否成功
    bool success = 2;
    // 如果失败，则返回失败的详细信息
    string Message = 3;
}